--- a/css/main.css
+++ b/css/main.css
@@ -2,51 +2,64 @@ body {
   font-family: "Dosis", sans-serif; 
 }
 
+#center {
+  justify-content: center !important;
+  text-align: center !important;
+}
+
 /* Home Page Style */
 .ww-home-page {
+
+  background-color: #e6ffe6 !important;
   background: url("../images/none.jpeg") no-repeat center center;
   background-size: cover;
-  background-position: 70%;
+  /* background-position: 70%; */
   height: 100vh;
   min-height: 480px;
   max-height: 1080px; }
-  .ww-home-page .ww-wedding-announcement {
+.ww-home-page .ww-wedding-announcement {
+  /* text-align: center; */
     width: 100%;
     max-width: 1600px;
-    margin: 0 auto;
     height: 100%;
-    color: grey;
+    color:  rgb(139, 139, 139);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-    letter-spacing: 2px; }
-    .ww-home-page .ww-wedding-announcement .ww-announcement-container {
-      max-width: 600px;
-      text-align: center;
-      margin-left: 0;
-      z-index: 999; }
-    .ww-home-page .ww-wedding-announcement img {
-      max-height: 350px;
-      width: auto; }
-      @media (max-width: 480px) {
-        .ww-home-page .ww-wedding-announcement img {
-          max-height: 250px;
-          width: auto; } }
+    letter-spacing: 2px; 
+  }
+.ww-home-page .ww-wedding-announcement .ww-announcement-container {
+    max-width: 600px;
+    text-align: center;
+    margin-left: 0;
+    z-index: 999; 
+  }
+.ww-home-page .ww-wedding-announcement img {
+    max-height: 350px;
+    width: auto; 
+  }
+    @media (max-width: 480px) {
+.ww-home-page .ww-wedding-announcement img {
+    max-height: 250px;
+    width: auto; } 
+  }
+.ww-home-page .ww-wedding-announcement .ww-couple-name {
+    font-size: 70px; 
+  }
+@media (max-width: 576px) {
     .ww-home-page .ww-wedding-announcement .ww-couple-name {
-      font-size: 70px; }
-      @media (max-width: 576px) {
-        .ww-home-page .ww-wedding-announcement .ww-couple-name {
-          font-size: 50px; } }
+      font-size: 50px; } }
 
 .ww-home-page:before {
-  content: "";
-  background-color: rgba(245, 138, 119, 0.2);
+  /* content: ""; */
+  /* background-color: rgba(65, 62, 62, 0.2); */
   width: 100%;
   height: 100%;
   height: 100vh;
   min-height: 480px;
   max-height: 1080px;
   position: absolute;
-  left: 0;
-  top: 0; }
+  /* left: 0;
+  top: 0;  */
+}
 
 /* Nav Bar Style */
 .ww-nav-bar .heart {
