--- a/css/main.css
+++ b/css/main.css
@@ -199,15 +199,15 @@ body {
 /*BACKGROUND COLOR*/
 .ww-section {
   padding: 100px 0; 
-  background-color: #e6ffe6 !important;
+  background-color: #9CAF88 !important;
 }
 
 .ww-nav-bar{
-  background-color: #e6ffe6 !important;
+  background-color:  #9CAF88 !important;
 }
 
 .ww-footer{
-  background-color: #e6ffe6 !important;
+  background-color:  #9CAF88 !important;
 }
 
 
