--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ a:hover {
 /* Home Page Style */
 .ww-home-page {
   background-color: #e6ffe6 !important;
-  background: url("../images/z6.jpeg") no-repeat center center;
+  background: url("../images/main2.jpg") no-repeat center center;
   background-size: cover;
   /* background-position: 70%; */
   height: 100vh;
